Tasks - Implemented Card Swiping UI, View Profile UI, Chat UI, Video Call UI, Discover Page UI for men and women, Discover Page Filter and Drawer

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,7 +153,13 @@ android {
                 storePassword MYAPP_UPLOAD_STORE_PASSWORD
                 keyAlias MYAPP_UPLOAD_KEY_ALIAS
                 keyPassword MYAPP_UPLOAD_KEY_PASSWORD
-            }
+            } 
+            // else {
+            //     storeFile file('your_key_name.keystore')
+            //     storePassword 'your_key_store_password'
+            //     keyAlias 'your_key_alias'
+            //     keyPassword 'your_key_file_alias_password'
+            //             }
         }
     }
     buildTypes {
