--- a/ios/Weecha/Info.plist
+++ b/ios/Weecha/Info.plist
@@ -110,6 +110,7 @@
 		<string>Mulish-Regular.ttf</string>
 		<string>Lato-Regular.ttf</string>
 		<string>SFPRODISPLAYREGULAR.OTF</string>
+		<string>Gilroy-Semibold.ttf</string>
 	</array>
 </dict>
 </plist>
