--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "2.x",
+    "react-native-toggle-element": "^1.0.1",
     "react-native-twitter-signin": "^1.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-video": "^5.2.0",
