--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^5.0.0",
+    "@react-native-firebase/app": "^14.2.2",
+    "@react-native-firebase/firestore": "^14.2.2",
     "@react-native-google-signin/google-signin": "^6.0.1",
     "@react-navigation/bottom-tabs": "5.x",
     "@react-navigation/drawer": "5.x",
@@ -41,7 +43,7 @@
     "react-native-offline": "^6.0.0",
     "react-native-paper": "^4.11.1",
     "react-native-radial-gradient": "^1.0.9",
-    "react-native-reanimated": "2.3.0-alpha.2",
+    "react-native-reanimated": "^2.3.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
