--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/material-top-tabs": "5.x",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
+    "agora-rn-uikit": "^3.3.0",
     "axios": "^0.24.0",
     "moment": "^2.29.1",
     "native-base": "^3.2.2",
@@ -29,6 +30,7 @@
     "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-agora": "^3.5.2",
     "react-native-animatable": "^1.3.3",
     "react-native-config": "^1.4.5",
     "react-native-create-thumbnail": "^1.5.1",
