--- a/package.json
+++ b/package.json
@@ -15,29 +15,51 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^5.0.0",
     "@react-native-google-signin/google-signin": "^6.0.1",
+    "@react-navigation/bottom-tabs": "5.x",
+    "@react-navigation/drawer": "5.x",
+    "@react-navigation/material-top-tabs": "5.x",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "axios": "^0.24.0",
+    "moment": "^2.29.1",
+    "momnet": "^2.29.1",
     "native-base": "^3.2.2",
+    "radio-buttons-react-native": "^1.0.4",
     "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-config": "^1.4.5",
+    "react-native-create-thumbnail": "^1.5.1",
+    "react-native-deck-swiper": "^2.0.5",
     "react-native-fbsdk": "^3.0.0",
+    "react-native-flexi-radio-button": "^0.2.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-grid-image-viewer": "^1.2.2",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-picker": "2.2.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^13.0.0",
+    "react-native-modal-datetime-picker": "^8.9.3",
     "react-native-offline": "^6.0.0",
     "react-native-paper": "^4.11.1",
     "react-native-radial-gradient": "^1.0.9",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "2.3.0-alpha.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-tab-view": "2.x",
+    "react-native-toggle-element": "^1.0.1",
     "react-native-twitter-signin": "^1.1.1",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-video": "^5.2.0",
     "react-redux": "^7.2.4",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
