Added Audi/Video calling phase 1

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@react-navigation/material-top-tabs": "5.x",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
+    "agora-react-native-rtm": "^1.4.8",
     "agora-rn-uikit": "^3.3.0",
     "axios": "^0.24.0",
+    "events": "^3.3.0",
     "moment": "^2.29.1",
     "native-base": "^3.2.2",
     "radio-buttons-react-native": "^1.0.4",
@@ -38,6 +40,8 @@
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-grid-image-viewer": "^1.2.2",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-picker": "2.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
@@ -45,6 +49,7 @@
     "react-native-offline": "^6.0.0",
     "react-native-paper": "^4.11.1",
     "react-native-radial-gradient": "^1.0.9",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.0",
@@ -69,12 +74,17 @@
     "@babel/core": "^7.16.0",
     "@babel/runtime": "^7.16.3",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-native": "^0.66.12",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.4.4",
     "eslint": "^8.4.1",
     "jest": "^27.4.4",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-codegen": "^0.0.7",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.5.4"
   },
   "jest": {
     "preset": "react-native"
